# FCCAnalyses

./: CMakeLists.txt  README.md  analysis.py  analysis_new.py  analyzer_vertexing_SV-MCmatched.py  analyzer_vertexing_SV-MCmatched_smeared_d0z0.py  analyzer_vertexing_SV-MCmatched_smeared_d0z0_67.py  analyzer_vertexing_SV-MCmatched_smeared_d0z0_83.py  analyzer_vertexing_SV-MCmatched_smeared_omega0.py  export_delphes.sh  recipe.txt  run_jobs_IDEA_analyzer.sh  setup.sh  vertex_resolution_last.C  vertex_resolution_last.h  vertex_resolution_last_smeared_d0z0.C  vertex_resolution_last_smeared_d0z0.h  vertex_resolution_last_smeared_d0z0_67.C  vertex_resolution_last_smeared_d0z0_67.h  vertex_resolution_last_smeared_d0z0_83.C  vertex_resolution_last_smeared_d0z0_83.h  vertex_resolution_last_smeared_omega0.C  vertex_resolution_last_smeared_omega0.h
IP_resolutions_exploration/: analyzer_vertexing_SV-MCmatched.py  analyzer_vertexing_SV-MCmatched_SH30.py  analyzer_vertexing_SV-MCmatched_VXD50.py  analyzer_vertexing_SV-MCmatched_VXD50_BP50.py  analyzer_vertexing_SV-MCmatched_d0z0_reduced_33.py  launch_IP_scripts.sh
Other_Emmanuel_Examples/: analysis_Bd2Ksttautau.py  analysis_Bd2Ksttautau_resolution_on_all_vertices.py  plots_Bd2Ksttautau.x
analyzers/dataframe/: CMakeLists.txt
analyzers/dataframe/FCCAnalyses/: AdditionalCode.h  VertexFitterSimple.h  VertexingUtils.h  ana_Bs2DsK.h
analyzers/dataframe/src/: AdditionalCode.cc  VertexFitterSimple.cc  VertexingUtils.cc  ana_Bs2DsK.cc
dev/bench/: data.js
doc/latest/: _algorithms_8cc.html  _algorithms_8h.html  _algorithms_8h_source.html  _c_s_template_8cc.html  _c_s_template_8h.html  _c_s_template_8h_source.html  _calo_ntupleizer_8cc.html  _calo_ntupleizer_8h.html  _calo_ntupleizer_8h_source.html  _external_recombiner_8cc.html  _external_recombiner_8h.html  _external_recombiner_8h_source.html  _f_c_c_analyses_2_link_def_8h.html  _f_c_c_analyses_2_link_def_8h_source.html  _jet_clustering_8cc.html  _jet_clustering_8h.html  _jet_clustering_8h_source.html  _jet_clustering_utils_8cc.html  _jet_clustering_utils_8h.html  _jet_clustering_utils_8h_source.html  _jet_constituents_utils_8cc.html  _jet_constituents_utils_8h.html  _jet_constituents_utils_8h_source.html  _jet_flavour_utils_8cc.html  _jet_flavour_utils_8h.html  _jet_flavour_utils_8h_source.html  _jet_tagging_utils_8cc.html  _jet_tagging_utils_8h.html  _jet_tagging_utils_8h_source.html  _m_c_particle_8cc.html  _m_c_particle_8h.html  _m_c_particle_8h_source.html  _o_n_n_x_runtime_8cc.html  _o_n_n_x_runtime_8h.html  _o_n_n_x_runtime_8h_source.html  _r_e_a_d_m_e_8md.html  _reconstructed_particle2_m_c_8cc.html  _reconstructed_particle2_m_c_8h.html  _reconstructed_particle2_m_c_8h_source.html  _reconstructed_particle2_track_8cc.html  (+378 more)
doc/latest/search/: all_10.js  all_6.js  all_7.js  functions_7.js  pages_0.js  searchdata.js
examples/FCCee/vertex/: analysis.py  analysis_Example1_NewVertexing.py  (+2 more)
old_setup_copy/: copy_of_setup.sh
vertexing_with_various_cards/: analyzer_vertexing_SV-MCmatched_various_cards_1.py  analyzer_vertexing_SV-MCmatched_various_cards_2.py  analyzer_vertexing_SV-MCmatched_various_cards_3.py  analyzer_vertexing_SV-MCmatched_various_cards_4.py  analyzer_vertexing_SV-MCmatched_various_cards_5.py  analyzer_vertexing_SV-MCmatched_various_cards_6.py  analyzer_vertexing_SV-MCmatched_various_cards_7.py  analyzer_vertexing_SV-MCmatched_various_cards_8.py  analyzer_vertexing_SV-MCmatched_various_cards_9.py  vertex_resolution_SH30.C  vertex_resolution_SH30.h  vertex_resolution_VXD50.C  vertex_resolution_VXD50.h  vertex_resolution_VXD50_BP50.C  vertex_resolution_VXD50_BP50.h
